# NewtonGBE

./: .gitignore  CMakeLists.txt  README.md  important_resources.txt
emulator/: main.c
include/: cartridge.h  common.h  cpu.h  databus.h  registers.h
lib/: cartridge.c  cpu.c  databus.c  registers.c
